--- a/backend/package.json
+++ b/backend/package.json
@@ -51,14 +51,12 @@
     },
     "dependencies": {
         "@adonisjs/core": "^6.9.0",
-        "edge.js": "^6.0.2",
         "inflection": "^3.0.0",
         "knex": "^3.1.0",
         "mysql": "^2.18.1",
         "objection": "^3.1.4",
         "reflect-metadata": "^0.2.2",
-        "sqlite3": "^5.1.7",
-        "tsx": "^4.15.5"
+        "sqlite3": "^5.1.7"
     },
     "hotHook": {
         "boundaries": [
